Created new spider plot script
Issues remain with plotting

--- a/myo-sensor-data-analysis/Spider emg.ipynb
+++ b/myo-sensor-data-analysis/Spider emg.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "import myo\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
     "class EmgCollector(myo.DeviceListener):\n",
